--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   image_picker: ^0.8.9
   flutter_pytorch: ^1.0.1
   typed_data: ^1.3.2
+  google_mlkit_image_labeling: ^0.10.0
+  path_provider: ^2.1.2
+  google_mlkit_object_detection: ^0.11.0
 
 
 
@@ -82,6 +85,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/
+    - assets/ml/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
